// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with inValid prop 1`] = `
<select
  className="sc-jlyJG fHzqKd"
/>
`;

exports[`renders correctly with no props 1`] = `
<select
  className="sc-jlyJG kNbSLV"
/>
`;

exports[`renders correctly with noBg prop 1`] = `
<select
  className="sc-jlyJG evsGob"
/>
`;

exports[`renders correctly with valid prop 1`] = `
<select
  className="sc-jlyJG blcTXQ"
/>
`;
